# genesis-engine

./: .env.example  .gitignore  ASSISTANT_ENHANCEMENT_PLAN.md  ASSISTANT_ENHANCEMENT_PROGRESS.md  CHANGES.md  ENHANCED_ASSISTANTS_FINAL_SUMMARY.md  ENV_AND_ASSISTANTS.md  FACTORY_PARAMETERS.md  Procfile  START_HERE.md  VBD_ARCHITECTURE.md  pyproject.toml  railway.json  requirements.txt  run_assistant_tests.py  start.sh  test_quick.py  verify_setup.py
agents/: builder_agent.py  factory_deps.py
config/: CONTEXT.md
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: AssistantPanel.tsx  CodeReviewPanel.tsx  CreateFactoryModal.tsx  FactoryCard.tsx  FactorySetupPanel.tsx  LiveCollaboration.tsx  SettingsPanel.tsx  Sidebar.tsx  Terminal.tsx
dashboard/lib/: store.ts
docs/: QUICKSTART.md
examples/: custom_factory_example.py  factory_interview.py  generate_env_template.py  vbd_architecture_example.py  view_factory_results.py
genesis/: __init__.py  assistants.py  assistants_enhanced_accessibility.py  assistants_enhanced_caching.py  assistants_enhanced_code_review.py  assistants_enhanced_docker.py  assistants_enhanced_example.py  assistants_enhanced_gdpr.py  assistants_enhanced_microservices.py  assistants_enhanced_soc2.py  assistants_enhanced_test_coverage.py  dagger_executor.py  database.py  factory_template.py  genesis_agent.py  genesis_engine.py  mcp_server.py  tenant_manager.py
genesis-engine/: .gitignore  ASSISTANTS_EXTENDED_SUMMARY.md  COMPLETE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  REUSABLE_STANDARDS_SUMMARY.md  SETUP_COMPLETE.md  VBD_SUMMARY.md  WHAT_WAS_CREATED.md  requirements-minimal.txt  run_demo.sh  start.sh  stop.sh
genesis-engine/.github/workflows/: genesis-review.yml
genesis-engine/agents/: architect_agent.py
genesis-engine/dashboard/: package-lock.json
genesis-engine/dashboard/app/: globals.css
genesis-engine/dashboard/components/: CodeReviewPanel.tsx  FactoryCard.tsx
genesis-engine/docker/: docker-compose.yml
genesis-engine/examples/: demo.py  genesis_demo.py  view_assistants.py
genesis-engine/genesis/: __init__.py  architecture_patterns.py  assistants_enhanced_api_design.py  assistants_enhanced_database.py  assistants_enhanced_event_driven.py  assistants_enhanced_fhir.py  assistants_enhanced_kubernetes.py  assistants_enhanced_pci_dss.py  assistants_enhanced_performance.py  assistants_enhanced_react.py  assistants_enhanced_refactoring.py  assistants_enhanced_ux_content.py  assistants_extended.py  cli.py  database.py  devcontainer.py  env_templates.py  standards.py
genesis-engine/genesis/api/: server.py
genesis/api/: __init__.py  server.py
genesis/tests/: __init__.py  test_assistants.py
graph/: factory_graph.py
infrastructure/terraform/: main.tf
scripts/: setup.sh
